--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -40,3 +40,18 @@
   author = {S. Bhat and M. Shin and S. Bahk and Y.-J. Kim and W. D. Jones},
   title = {{An accelerated {miRNA}-based screen implicates Atf-3 in odorant receptor expression}},
 }
+
+
+@article{Larsson_2004,
+  doi = {10.1016/j.neuron.2004.08.019},
+  url = {http://dx.doi.org/10.1016/j.neuron.2004.08.019},
+  year = {2004},
+  month = {sep},
+  publisher = {Elsevier {BV}},
+  volume = {43},
+  number = {5},
+  pages = {703--714},
+  author = {Mattias C. Larsson and Ana I. Domingos and Walton D. Jones and M.Eugenia Chiappe and Hubert Amrein and Leslie B. Vosshall},
+  title = {{Or83b Encodes a Broadly Expressed Odorant Receptor Essential for Drosophila Olfaction}},
+  journal = {Neuron},
+}
