added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -25,3 +25,18 @@
   title = {{Genome-wide {microRNA} screening reveals that the evolutionary conserved {miR}-9a regulates body growth by targeting {sNPFR}1/{NPYR}}},
   journal = {Nature Communications},
 }
+
+
+@article{Pfeiffer_2010,
+  doi = {10.1534/genetics.110.119917},
+  url = {http://dx.doi.org/10.1534/genetics.110.119917},
+  year = {2010},
+  month = {aug},
+  publisher = {Genetics Society of America},
+  volume = {186},
+  number = {2},
+  pages = {735--755},
+  author = {B. D. Pfeiffer and T.-T. B. Ngo and K. L. Hibbard and C. Murphy and A. Jenett and J. W. Truman and G. M. Rubin},
+  title = {{Refinement of Tools for Targeted Gene Expression in Drosophila}},
+  journal = {Genetics},
+}
