added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -40,3 +40,18 @@
   title = {{Refinement of Tools for Targeted Gene Expression in Drosophila}},
   journal = {Genetics},
 }
+
+
+@article{Wang_2003,
+  doi = {10.1016/s0092-8674(03)00004-7},
+  url = {http://dx.doi.org/10.1016/S0092-8674(03)00004-7},
+  year = {2003},
+  month = {jan},
+  publisher = {Elsevier {BV}},
+  volume = {112},
+  number = {2},
+  pages = {271--282},
+  author = {Jing W. Wang and Allan M. Wong and Jorge Flores and Leslie B. Vosshall and Richard Axel},
+  title = {{Two-Photon Calcium Imaging Reveals an Odor-Evoked Map of Activity in the Fly Brain}},
+  journal = {Cell},
+}
