added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -55,3 +55,19 @@
   title = {{Two-Photon Calcium Imaging Reveals an Odor-Evoked Map of Activity in the Fly Brain}},
   journal = {Cell},
 }
+
+
+@article{Benton_2006,
+  doi = {10.1371/journal.pbio.0040020},
+  url = {http://dx.doi.org/10.1371/journal.pbio.0040020},
+  year = {2006},
+  month = {jan},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {4},
+  number = {2},
+  pages = {e20},
+  author = {Richard Benton and Silke Sachse and Stephen W Michnick and Leslie B Vosshall},
+  editor = {Pamela Bjorkman},
+  title = {{Atypical Membrane Topology and Heteromeric Function of Drosophila Odorant Receptors In Vivo}},
+  journal = {{PLoS} Biology},
+}
