added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -57,3 +57,18 @@
   title = {{Atypical Membrane Topology and Heteromeric Function of Drosophila Odorant Receptors In Vivo}},
   journal = {{PLoS} Biology},
 }
+
+
+@article{Fluegge_2012,
+  doi = {10.1038/nn.3074},
+  url = {http://dx.doi.org/10.1038/nn.3074},
+  year = {2012},
+  month = {mar},
+  publisher = {Nature Publishing Group},
+  volume = {15},
+  number = {5},
+  pages = {754--762},
+  author = {Daniela Fluegge and Lisa M Moeller and Annika Cichy and Monika Gorin and Agnes Weth and Sophie Veitinger and Silvia Cainarca and Stefan Lohmer and Sabrina Corazza and Eva M Neuhaus and Werner Baumgartner and Jennifer Spehr and Marc Spehr},
+  title = {{Mitochondrial Ca2$\mathplus$ mobilization is a key element in olfactory signaling}},
+  journal = {Nature Neuroscience},
+}
