added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -72,3 +72,17 @@
   title = {{Mitochondrial Ca2$\mathplus$ mobilization is a key element in olfactory signaling}},
   journal = {Nature Neuroscience},
 }
+
+
+@article{Younus_2014,
+  doi = {10.1016/j.ibmb.2014.07.003},
+  url = {http://dx.doi.org/10.1016/j.ibmb.2014.07.003},
+  year = {2014},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {53},
+  pages = {30--43},
+  author = {Faisal Younus and Thomas Chertemps and Stephen L. Pearce and Gunjan Pandey and Fran{\c{c}}oise Bozzolan and Christopher W. Coppin and Robyn J. Russell and Martine Maïb{\`{e}}che-Coisne and John G. Oakeshott},
+  title = {{Identification of candidate odorant degrading gene/enzyme systems in the antennal transcriptome of Drosophila melanogaster}},
+  journal = {Insect Biochemistry and Molecular Biology},
+}
