added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -86,3 +86,18 @@
   title = {{Identification of candidate odorant degrading gene/enzyme systems in the antennal transcriptome of Drosophila melanogaster}},
   journal = {Insect Biochemistry and Molecular Biology},
 }
+
+
+@article{Carraher_2013,
+  doi = {10.1016/j.pep.2013.06.002},
+  url = {http://dx.doi.org/10.1016/j.pep.2013.06.002},
+  year = {2013},
+  month = {aug},
+  publisher = {Elsevier {BV}},
+  volume = {90},
+  number = {2},
+  pages = {160--169},
+  author = {Colm Carraher and Ali Reza Nazmi and Richard D. Newcomb and Andrew Kralicek},
+  title = {{Recombinant expression detergent solubilisation and purification of insect odorant receptor subunits}},
+  journal = {Protein Expression and Purification},
+}
