--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -116,3 +116,18 @@
   title = {{Functional diversity among sensory receptors in a Drosophila olfactory circuit}},
   journal = {Proceedings of the National Academy of Sciences},
 }
+
+
+@article{Stocker_2006,
+  doi = {10.1016/j.cub.2005.12.008},
+  url = {http://dx.doi.org/10.1016/j.cub.2005.12.008},
+  year = {2006},
+  month = {jan},
+  publisher = {Elsevier {BV}},
+  volume = {16},
+  number = {1},
+  pages = {R16--R18},
+  author = {Reinhard F. Stocker},
+  title = {{Olfactory Coding: Connecting Odorant Receptor Expression and Behavior in the Drosophila Larva}},
+  journal = {Current Biology},
+}
