added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -131,3 +131,18 @@
   title = {{Olfactory Coding: Connecting Odorant Receptor Expression and Behavior in the Drosophila Larva}},
   journal = {Current Biology},
 }
+
+
+@article{Su_2009,
+  doi = {10.1016/j.cell.2009.09.015},
+  url = {http://dx.doi.org/10.1016/j.cell.2009.09.015},
+  year = {2009},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {139},
+  number = {1},
+  pages = {45--59},
+  author = {Chih-Ying Su and Karen Menuz and John R. Carlson},
+  title = {{Olfactory Perception: Receptors Cells, and Circuits}},
+  journal = {Cell},
+}
