added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -146,3 +146,15 @@
   title = {{Olfactory Perception: Receptors Cells, and Circuits}},
   journal = {Cell},
 }
+
+
+@article{Kaupp_2010,
+  doi = {10.1038/nrn2789},
+  url = {http://dx.doi.org/10.1038/nrn2789},
+  year = {2010},
+  month = {feb},
+  publisher = {Nature Publishing Group},
+  author = {U. Benjamin Kaupp},
+  title = {{Olfactory signalling in vertebrates and insects: differences and commonalities}},
+  journal = {Nature Reviews Neuroscience},
+}
