added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -158,3 +158,18 @@
   title = {{Olfactory signalling in vertebrates and insects: differences and commonalities}},
   journal = {Nature Reviews Neuroscience},
 }
+
+
+@article{Hildebrand_1997,
+  doi = {10.1146/annurev.neuro.20.1.595},
+  url = {http://dx.doi.org/10.1146/annurev.neuro.20.1.595},
+  year = {1997},
+  month = {mar},
+  publisher = {Annual Reviews},
+  volume = {20},
+  number = {1},
+  pages = {595--631},
+  author = {John G. Hildebrand and Gordon M. Shepherd},
+  title = {{{MECHANISMS} {OF} {OLFACTORY} {DISCRIMINATION}:Converging Evidence for Common Principles Across Phyla}},
+  journal = {Annu. Rev. Neurosci.},
+}
