added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -173,3 +173,18 @@
   title = {{{MECHANISMS} {OF} {OLFACTORY} {DISCRIMINATION}:Converging Evidence for Common Principles Across Phyla}},
   journal = {Annu. Rev. Neurosci.},
 }
+
+
+@article{Garrity_2010,
+  doi = {10.1101/gad.1953710},
+  url = {http://dx.doi.org/10.1101/gad.1953710},
+  year = {2010},
+  month = {nov},
+  publisher = {Cold Spring Harbor Laboratory Press},
+  volume = {24},
+  number = {21},
+  pages = {2365--2382},
+  author = {P. A. Garrity and M. B. Goodman and A. D. Samuel and P. Sengupta},
+  title = {{Running hot and cold: behavioral strategies neural circuits, and the molecular machinery for thermotaxis in C. elegans and Drosophila}},
+  journal = {Genes {\&} Development},
+}
