--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -188,3 +188,18 @@
   title = {{Running hot and cold: behavioral strategies neural circuits, and the molecular machinery for thermotaxis in C. elegans and Drosophila}},
   journal = {Genes {\&} Development},
 }
+
+
+@article{Buck_1991,
+  doi = {10.1016/0092-8674(91)90418-x},
+  url = {http://dx.doi.org/10.1016/0092-8674(91)90418-X},
+  year = {1991},
+  month = {apr},
+  publisher = {Elsevier {BV}},
+  volume = {65},
+  number = {1},
+  pages = {175--187},
+  author = {Linda Buck and Richard Axel},
+  title = {{A novel multigene family may encode odorant receptors: A molecular basis for odor recognition}},
+  journal = {Cell},
+}
