added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -203,3 +203,18 @@
   title = {{A novel multigene family may encode odorant receptors: A molecular basis for odor recognition}},
   journal = {Cell},
 }
+
+
+@article{Nei_2008,
+  doi = {10.1038/nrg2480},
+  url = {http://dx.doi.org/10.1038/nrg2480},
+  year = {2008},
+  month = {dec},
+  publisher = {Nature Publishing Group},
+  volume = {9},
+  number = {12},
+  pages = {951--963},
+  author = {Masatoshi Nei and Yoshihito Niimura and Masafumi Nozawa},
+  title = {{The evolution of animal chemosensory receptor gene repertoires: roles of chance and necessity}},
+  journal = {Nat Rev Genet},
+}
