added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -218,3 +218,18 @@
   title = {{The evolution of animal chemosensory receptor gene repertoires: roles of chance and necessity}},
   journal = {Nat Rev Genet},
 }
+
+
+@article{Clyne_1999,
+  doi = {10.1016/s0896-6273(00)81093-4},
+  url = {http://dx.doi.org/10.1016/S0896-6273(00)81093-4},
+  year = {1999},
+  month = {feb},
+  publisher = {Elsevier {BV}},
+  volume = {22},
+  number = {2},
+  pages = {327--338},
+  author = {Peter J. Clyne and Coral G. Warr and Marc R. Freeman and Derek Lessing and Junhyong Kim and John R. Carlson},
+  title = {{A Novel Family of Divergent Seven-Transmembrane Proteins}},
+  journal = {Neuron},
+}
