added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -233,3 +233,18 @@
   title = {{A Novel Family of Divergent Seven-Transmembrane Proteins}},
   journal = {Neuron},
 }
+
+
+@article{Vosshall_1999,
+  doi = {10.1016/s0092-8674(00)80582-6},
+  url = {http://dx.doi.org/10.1016/S0092-8674(00)80582-6},
+  year = {1999},
+  month = {mar},
+  publisher = {Elsevier {BV}},
+  volume = {96},
+  number = {5},
+  pages = {725--736},
+  author = {Leslie B Vosshall and Hubert Amrein and Pavel S Morozov and Andrey Rzhetsky and Richard Axel},
+  title = {{A Spatial Map of Olfactory Receptor Expression in the Drosophila Antenna}},
+  journal = {Cell},
+}
