added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -248,3 +248,18 @@
   title = {{A Spatial Map of Olfactory Receptor Expression in the Drosophila Antenna}},
   journal = {Cell},
 }
+
+
+@article{Gao_1999,
+  doi = {10.1006/geno.1999.5894},
+  url = {http://dx.doi.org/10.1006/geno.1999.5894},
+  year = {1999},
+  month = {aug},
+  publisher = {Elsevier {BV}},
+  volume = {60},
+  number = {1},
+  pages = {31--39},
+  author = {Qian Gao and Andrew Chess},
+  title = {{Identification of Candidate Drosophila Olfactory Receptors from Genomic {DNA} Sequence}},
+  journal = {Genomics},
+}
