added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -263,3 +263,17 @@
   title = {{Identification of Candidate Drosophila Olfactory Receptors from Genomic {DNA} Sequence}},
   journal = {Genomics},
 }
+
+
+@article{2000,
+  doi = {10.1016/s0092-8674(00)00020-9},
+  url = {http://dx.doi.org/10.1016/S0092-8674(00)00020-9},
+  year = {2000},
+  month = {jul},
+  publisher = {Elsevier {BV}},
+  volume = {102},
+  number = {2},
+  pages = {145--146},
+  title = {{A Unified Nomenclature System for the Drosophila Odorant Receptors}},
+  journal = {Cell},
+}
