--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -322,3 +322,18 @@
   title = {{Olfaction: Diverse Species Conserved Principles}},
   journal = {Neuron},
 }
+
+
+@article{Hallem_2006,
+  doi = {10.1016/j.cell.2006.01.050},
+  url = {http://dx.doi.org/10.1016/j.cell.2006.01.050},
+  year = {2006},
+  month = {apr},
+  publisher = {Elsevier {BV}},
+  volume = {125},
+  number = {1},
+  pages = {143--160},
+  author = {Elissa A. Hallem and John R. Carlson},
+  title = {{Coding of Odors by a Receptor Repertoire}},
+  journal = {Cell},
+}
