added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -337,3 +337,18 @@
   title = {{Coding of Odors by a Receptor Repertoire}},
   journal = {Cell},
 }
+
+
+@article{Couto_2005,
+  doi = {10.1016/j.cub.2005.07.034},
+  url = {http://dx.doi.org/10.1016/j.cub.2005.07.034},
+  year = {2005},
+  month = {sep},
+  publisher = {Elsevier {BV}},
+  volume = {15},
+  number = {17},
+  pages = {1535--1547},
+  author = {Africa Couto and Mattias Alenius and Barry J. Dickson},
+  title = {{Molecular Anatomical, and Functional Organization of the Drosophila Olfactory System}},
+  journal = {Current Biology},
+}
