added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -367,3 +367,18 @@
   title = {{Controversy and consensus: noncanonical signaling mechanisms in the insect olfactory system}},
   journal = {Current Opinion in Neurobiology},
 }
+
+
+@article{Lundin_2007,
+  doi = {10.1016/j.febslet.2007.11.007},
+  url = {http://dx.doi.org/10.1016/j.febslet.2007.11.007},
+  year = {2007},
+  month = {nov},
+  publisher = {Wiley-Blackwell},
+  volume = {581},
+  number = {29},
+  pages = {5601--5604},
+  author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
+  title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
+  journal = {FEBS} Letters},
+}
