added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,5 +380,20 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {FEBS} Letters},
+  journal = {{FEBS} Letters}},
+}
+
+
+@article{Smart_2008,
+  doi = {10.1016/j.ibmb.2008.05.002},
+  url = {http://dx.doi.org/10.1016/j.ibmb.2008.05.002},
+  year = {2008},
+  month = {aug},
+  publisher = {Elsevier {BV}},
+  volume = {38},
+  number = {8},
+  pages = {770--780},
+  author = {Renee Smart and Aidan Kiely and Morgan Beale and Ernesto Vargas and Colm Carraher and Andrew V. Kralicek and David L. Christie and Chen Chen and Richard D. Newcomb and Coral G. Warr},
+  title = {{Drosophila odorant receptors are novel seven transmembrane domain proteins that can signal independently of heterotrimeric G proteins}},
+  journal = {Insect Biochemistry and Molecular Biology},
 }
