--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{FEBS} Letters}},
+  journal = {{{FEBS} Letters}}},
 }
 
 
@@ -396,4 +396,19 @@
   author = {Renee Smart and Aidan Kiely and Morgan Beale and Ernesto Vargas and Colm Carraher and Andrew V. Kralicek and David L. Christie and Chen Chen and Richard D. Newcomb and Coral G. Warr},
   title = {{Drosophila odorant receptors are novel seven transmembrane domain proteins that can signal independently of heterotrimeric G proteins}},
   journal = {Insect Biochemistry and Molecular Biology},
+}
+
+
+@article{Dobritsa_2003,
+  doi = {10.1016/s0896-6273(03)00094-1},
+  url = {http://dx.doi.org/10.1016/S0896-6273(03)00094-1},
+  year = {2003},
+  month = {mar},
+  publisher = {Elsevier {BV}},
+  volume = {37},
+  number = {5},
+  pages = {827--841},
+  author = {Anna A. Dobritsa and Wynand van der Goes van Naters and Coral G. Warr and R.Alexander Steinbrecht and John R. Carlson},
+  title = {{Integrating the Molecular and Cellular Basis of Odor Coding in the Drosophila Antenna}},
+  journal = {Neuron},
 }
