added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{FEBS} Letters}}},
+  journal = {{{{FEBS} Letters}}}},
 }
 
 
@@ -410,5 +410,20 @@
   pages = {827--841},
   author = {Anna A. Dobritsa and Wynand van der Goes van Naters and Coral G. Warr and R.Alexander Steinbrecht and John R. Carlson},
   title = {{Integrating the Molecular and Cellular Basis of Odor Coding in the Drosophila Antenna}},
+  journal = {Neuron},
+}
+
+
+@article{de_Bruyne_2001,
+  doi = {10.1016/s0896-6273(01)00289-6},
+  url = {http://dx.doi.org/10.1016/S0896-6273(01)00289-6},
+  year = {2001},
+  month = {may},
+  publisher = {Elsevier {BV}},
+  volume = {30},
+  number = {2},
+  pages = {537--552},
+  author = {Marien de Bruyne and Kara Foster and John R. Carlson},
+  title = {{Odor Coding in the Drosophila Antenna}},
   journal = {Neuron},
 }
