added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{FEBS} Letters}}}},
+  journal = {{{{{FEBS} Letters}}}}},
 }
 
 
@@ -426,4 +426,19 @@
   author = {Marien de Bruyne and Kara Foster and John R. Carlson},
   title = {{Odor Coding in the Drosophila Antenna}},
   journal = {Neuron},
+}
+
+
+@article{Hallem_2004,
+  doi = {10.1016/j.cell.2004.05.012},
+  url = {http://dx.doi.org/10.1016/j.cell.2004.05.012},
+  year = {2004},
+  month = {jun},
+  publisher = {Elsevier {BV}},
+  volume = {117},
+  number = {7},
+  pages = {965--979},
+  author = {Elissa A Hallem and Michael G Ho and John R Carlson},
+  title = {{The Molecular Basis of Odor Coding in the Drosophila Antenna}},
+  journal = {Cell},
 }
