added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{FEBS} Letters}}}}},
+  journal = {{{{{{FEBS} Letters}}}}}},
 }
 
 
@@ -441,4 +441,19 @@
   author = {Elissa A Hallem and Michael G Ho and John R Carlson},
   title = {{The Molecular Basis of Odor Coding in the Drosophila Antenna}},
   journal = {Cell},
+}
+
+
+@article{Benton_2015,
+  doi = {10.1016/j.tree.2015.07.009},
+  url = {http://dx.doi.org/10.1016/j.tree.2015.07.009},
+  year = {2015},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {30},
+  number = {10},
+  pages = {590--600},
+  author = {Richard Benton},
+  title = {{Multigene Family Evolution: Perspectives from Insect Chemoreceptors}},
+  journal = {Trends in Ecology {\&} Evolution},
 }
