added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{FEBS} Letters}}}}}},
+  journal = {{{{{{{FEBS} Letters}}}}}}},
 }
 
 
@@ -456,4 +456,18 @@
   author = {Richard Benton},
   title = {{Multigene Family Evolution: Perspectives from Insect Chemoreceptors}},
   journal = {Trends in Ecology {\&} Evolution},
+}
+
+
+@article{Hopf_2015,
+  doi = {10.1038/ncomms7077},
+  url = {http://dx.doi.org/10.1038/ncomms7077},
+  year = {2015},
+  month = {jan},
+  publisher = {Nature Publishing Group},
+  volume = {6},
+  pages = {6077},
+  author = {Thomas A. Hopf and Satoshi Morinaga and Sayoko Ihara and Kazushige Touhara and Debora S. Marks and Richard Benton},
+  title = {{Amino acid coevolution reveals three-dimensional structure and functional domains of insect odorant receptors}},
+  journal = {Nature Communications},
 }
