added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{FEBS} Letters}}}}}}},
+  journal = {{{{{{{{FEBS} Letters}}}}}}}},
 }
 
 
@@ -470,4 +470,19 @@
   author = {Thomas A. Hopf and Satoshi Morinaga and Sayoko Ihara and Kazushige Touhara and Debora S. Marks and Richard Benton},
   title = {{Amino acid coevolution reveals three-dimensional structure and functional domains of insect odorant receptors}},
   journal = {Nature Communications},
+}
+
+
+@article{Wistrand_2006,
+  doi = {10.1110/ps.051745906},
+  url = {http://dx.doi.org/10.1110/ps.051745906},
+  year = {2006},
+  month = {mar},
+  publisher = {Wiley-Blackwell},
+  volume = {15},
+  number = {3},
+  pages = {509--521},
+  author = {Markus Wistrand and Lukas Käll and Erik L.L. Sonnhammer},
+  title = {{A general model of G protein-coupled receptor sequences and its application to detect remote homologs}},
+  journal = {Protein Sci.},
 }
