added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{FEBS} Letters}}}}}}}},
+  journal = {{{{{{{{{FEBS} Letters}}}}}}}}},
 }
 
 
@@ -485,4 +485,19 @@
   author = {Markus Wistrand and Lukas Käll and Erik L.L. Sonnhammer},
   title = {{A general model of G protein-coupled receptor sequences and its application to detect remote homologs}},
   journal = {Protein Sci.},
+}
+
+
+@article{Jones_2005,
+  doi = {10.1016/j.cub.2005.02.007},
+  url = {http://dx.doi.org/10.1016/j.cub.2005.02.007},
+  year = {2005},
+  month = {feb},
+  publisher = {Elsevier {BV}},
+  volume = {15},
+  number = {4},
+  pages = {R119--R121},
+  author = {Walton D. Jones and Thuy-Ai T. Nguyen and Brian Kloss and Kevin J. Lee and Leslie B. Vosshall},
+  title = {{Functional conservation of an insect odorant receptor gene across 250 million years of evolution}},
+  journal = {Current Biology},
 }
