added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{FEBS} Letters}}}}}}}}},
+  journal = {{{{{{{{{{FEBS} Letters}}}}}}}}}},
 }
 
 
@@ -500,4 +500,19 @@
   author = {Walton D. Jones and Thuy-Ai T. Nguyen and Brian Kloss and Kevin J. Lee and Leslie B. Vosshall},
   title = {{Functional conservation of an insect odorant receptor gene across 250 million years of evolution}},
   journal = {Current Biology},
+}
+
+
+@article{Kain_2008,
+  doi = {10.1523/jneurosci.5306-07.2008},
+  url = {http://dx.doi.org/10.1523/JNEUROSCI.5306-07.2008},
+  year = {2008},
+  month = {apr},
+  publisher = {Society for Neuroscience},
+  volume = {28},
+  number = {18},
+  pages = {4745--4755},
+  author = {P. Kain and T. S. Chakraborty and S. Sundaram and O. Siddiqi and V. Rodrigues and G. Hasan},
+  title = {{Reduced Odor Responses from Antennal Neurons of Gq~ Phospholipase C~, and {rdgA} Mutants in Drosophila Support a Role for a Phospholipid Intermediate in Insect Olfactory Transduction}},
+  journal = {Journal of Neuroscience},
 }
