added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{FEBS} Letters}}}}}}}}}},
+  journal = {{{{{{{{{{{FEBS} Letters}}}}}}}}}}},
 }
 
 
@@ -514,5 +514,20 @@
   pages = {4745--4755},
   author = {P. Kain and T. S. Chakraborty and S. Sundaram and O. Siddiqi and V. Rodrigues and G. Hasan},
   title = {{Reduced Odor Responses from Antennal Neurons of Gq~ Phospholipase C~, and {rdgA} Mutants in Drosophila Support a Role for a Phospholipid Intermediate in Insect Olfactory Transduction}},
+  journal = {Journal of Neuroscience},
+}
+
+
+@article{Yao_2010,
+  doi = {10.1523/jneurosci.6357-09.2010},
+  url = {http://dx.doi.org/10.1523/JNEUROSCI.6357-09.2010},
+  year = {2010},
+  month = {mar},
+  publisher = {Society for Neuroscience},
+  volume = {30},
+  number = {13},
+  pages = {4562--4572},
+  author = {C. A. Yao and J. R. Carlson},
+  title = {{Role of G-Proteins in Odor-Sensing and {CO}2-Sensing Neurons in Drosophila}},
   journal = {Journal of Neuroscience},
 }
