added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{FEBS} Letters}}}}}}}}}}},
+  journal = {{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}},
 }
 
 
@@ -530,4 +530,19 @@
   author = {C. A. Yao and J. R. Carlson},
   title = {{Role of G-Proteins in Odor-Sensing and {CO}2-Sensing Neurons in Drosophila}},
   journal = {Journal of Neuroscience},
+}
+
+
+@article{Sato_2008,
+  doi = {10.1038/nature06850},
+  url = {http://dx.doi.org/10.1038/nature06850},
+  year = {2008},
+  month = {apr},
+  publisher = {Nature Publishing Group},
+  volume = {452},
+  number = {7190},
+  pages = {1002--1006},
+  author = {Koji Sato and Maurizio Pellegrino and Takao Nakagawa and Tatsuro Nakagawa and Leslie B. Vosshall and Kazushige Touhara},
+  title = {{Insect olfactory receptors are heteromeric ligand-gated ion channels}},
+  journal = {Nature},
 }
