added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}},
 }
 
 
@@ -544,5 +544,20 @@
   pages = {1002--1006},
   author = {Koji Sato and Maurizio Pellegrino and Takao Nakagawa and Tatsuro Nakagawa and Leslie B. Vosshall and Kazushige Touhara},
   title = {{Insect olfactory receptors are heteromeric ligand-gated ion channels}},
+  journal = {Nature},
+}
+
+
+@article{Wicher_2008,
+  doi = {10.1038/nature06861},
+  url = {http://dx.doi.org/10.1038/nature06861},
+  year = {2008},
+  month = {apr},
+  publisher = {Nature Publishing Group},
+  volume = {452},
+  number = {7190},
+  pages = {1007--1011},
+  author = {Dieter Wicher and Ronny Schäfer and Ren{\'{e}} Bauernfeind and Marcus C. Stensmyr and Regine Heller and Stefan H. Heinemann and Bill S. Hansson},
+  title = {{Drosophila odorant receptors are both ligand-gated and cyclic-nucleotide-activated cation channels}},
   journal = {Nature},
 }
