added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}},
 }
 
 
@@ -560,4 +560,19 @@
   author = {Dieter Wicher and Ronny Schäfer and Ren{\'{e}} Bauernfeind and Marcus C. Stensmyr and Regine Heller and Stefan H. Heinemann and Bill S. Hansson},
   title = {{Drosophila odorant receptors are both ligand-gated and cyclic-nucleotide-activated cation channels}},
   journal = {Nature},
+}
+
+
+@article{Wicher_2009,
+  doi = {10.1111/j.1749-6632.2009.04101.x},
+  url = {http://dx.doi.org/10.1111/j.1749-6632.2009.04101.x},
+  year = {2009},
+  month = {jul},
+  publisher = {Wiley-Blackwell},
+  volume = {1170},
+  number = {1},
+  pages = {164--167},
+  author = {Dieter Wicher and Ronny Schäfer and Ren{\'{e}} Bauernfeind and Marcus C. Stensmyr and Regine Heller and Stefan H. Heinemann and Bill S. Hansson},
+  title = {{{dOr}83b-Receptor or Ion Channel?}},
+  journal = {Annals of the New York Academy of Sciences},
 }
