added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}},
 }
 
 
@@ -575,4 +575,19 @@
   author = {Dieter Wicher and Ronny Schäfer and Ren{\'{e}} Bauernfeind and Marcus C. Stensmyr and Regine Heller and Stefan H. Heinemann and Bill S. Hansson},
   title = {{{dOr}83b-Receptor or Ion Channel?}},
   journal = {Annals of the New York Academy of Sciences},
+}
+
+
+@article{Neuhaus_2004,
+  doi = {10.1038/nn1371},
+  url = {http://dx.doi.org/10.1038/nn1371},
+  year = {2004},
+  month = {dec},
+  publisher = {Nature Publishing Group},
+  volume = {8},
+  number = {1},
+  pages = {15--17},
+  author = {Eva M Neuhaus and Günter Gisselmann and Weiyi Zhang and Ruth Dooley and Klemens Störtkuhl and Hanns Hatt},
+  title = {{Odorant receptor heterodimerization in the olfactory system of Drosophila melanogaster}},
+  journal = {Nature Neuroscience},
 }
