added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}},
 }
 
 
@@ -590,4 +590,19 @@
   author = {Eva M Neuhaus and Günter Gisselmann and Weiyi Zhang and Ruth Dooley and Klemens Störtkuhl and Hanns Hatt},
   title = {{Odorant receptor heterodimerization in the olfactory system of Drosophila melanogaster}},
   journal = {Nature Neuroscience},
+}
+
+
+@article{Olsson_2011,
+  doi = {10.1016/j.jneumeth.2011.08.015},
+  url = {http://dx.doi.org/10.1016/j.jneumeth.2011.08.015},
+  year = {2011},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {201},
+  number = {2},
+  pages = {385--389},
+  author = {Shannon B. Olsson and Merid N. Getahun and Dieter Wicher and Bill S. Hansson},
+  title = {{Piezo controlled microinjection: An in vivo complement for in vitro sensory studies in insects}},
+  journal = {Journal of Neuroscience Methods},
 }
