added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}},
 }
 
 
@@ -605,4 +605,16 @@
   author = {Shannon B. Olsson and Merid N. Getahun and Dieter Wicher and Bill S. Hansson},
   title = {{Piezo controlled microinjection: An in vivo complement for in vitro sensory studies in insects}},
   journal = {Journal of Neuroscience Methods},
+}
+
+
+@article{Sargsyan_2011,
+  doi = {10.3389/fncel.2011.00005},
+  url = {http://dx.doi.org/10.3389/fncel.2011.00005},
+  year = {2011},
+  publisher = {Frontiers Media {SA}},
+  volume = {5},
+  author = {Vardanush Sargsyan and Merid Negash Getahun and Sof{\'{\i}}a Lavista Llanos and Shannon B. Olsson and Bill S. Hansson and Dieter Wicher},
+  title = {{Phosphorylation via {PKC} Regulates the Function of the Drosophila Odorant Co-Receptor}},
+  journal = {Frontiers in Cellular Neuroscience},
 }
