added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -617,4 +617,20 @@
   author = {Vardanush Sargsyan and Merid Negash Getahun and Sof{\'{\i}}a Lavista Llanos and Shannon B. Olsson and Bill S. Hansson and Dieter Wicher},
   title = {{Phosphorylation via {PKC} Regulates the Function of the Drosophila Odorant Co-Receptor}},
   journal = {Frontiers in Cellular Neuroscience},
+}
+
+
+@article{Nolte_2013,
+  doi = {10.1371/journal.pone.0062648},
+  url = {http://dx.doi.org/10.1371/journal.pone.0062648},
+  year = {2013},
+  month = {may},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {8},
+  number = {5},
+  pages = {e62648},
+  author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
+  editor = {Alan Nighorn},
+  title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
+  journal = {PLoS} {ONE}},
 }
