--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,5 +632,17 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {PLoS} {ONE}},
+  journal = {{PLoS} {ONE}}},
+}
+
+
+@article{Wicher_2012,
+  doi = {10.3389/fncel.2012.00048},
+  url = {http://dx.doi.org/10.3389/fncel.2012.00048},
+  year = {2012},
+  publisher = {Frontiers Media {SA}},
+  volume = {6},
+  author = {Dieter Wicher},
+  title = {{Functional and evolutionary aspects of chemoreceptors}},
+  journal = {Frontiers in Cellular Neuroscience},
 }
