--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{PLoS} {ONE}}}},
+  journal = {{{{PLoS} {ONE}}}}},
 }
 
 
@@ -657,4 +657,17 @@
   author = {Merid N. Getahun and Dieter Wicher and Bill S. Hansson and Shannon B. Olsson},
   title = {{Temporal response dynamics of Drosophila olfactory sensory neurons depends on receptor type and response polarity}},
   journal = {Frontiers in Cellular Neuroscience},
+}
+
+
+@article{Getahun_2016,
+  doi = {10.1242/jeb.143396},
+  url = {http://dx.doi.org/10.1242/jeb.143396},
+  year = {2016},
+  month = {sep},
+  publisher = {The Company of Biologists},
+  pages = {jeb.143396},
+  author = {Merid N. Getahun and Michael Thoma and Sofia Lavista-Llanos and Ian Keesey and Richard A. Fandino and Markus Knaden and Dieter Wicher and Shannon B. Olsson and Bill S. Hansson},
+  title = {{Intracellular regulation of the insect chemoreceptor complex impacts odor localization in flying insects}},
+  journal = {J Exp Biol},
 }
