added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{{{PLoS} {ONE}}}}}},
+  journal = {{{{{{PLoS} {ONE}}}}}}},
 }
 
 
@@ -669,5 +669,20 @@
   pages = {jeb.143396},
   author = {Merid N. Getahun and Michael Thoma and Sofia Lavista-Llanos and Ian Keesey and Richard A. Fandino and Markus Knaden and Dieter Wicher and Shannon B. Olsson and Bill S. Hansson},
   title = {{Intracellular regulation of the insect chemoreceptor complex impacts odor localization in flying insects}},
+  journal = {J Exp Biol},
+}
+
+
+@article{Miazzi_2016,
+  doi = {10.1242/jeb.137901},
+  url = {http://dx.doi.org/10.1242/jeb.137901},
+  year = {2016},
+  month = {apr},
+  publisher = {The Company of Biologists},
+  volume = {219},
+  number = {12},
+  pages = {1798--1803},
+  author = {Fabio Miazzi and Bill S. Hansson and Dieter Wicher},
+  title = {{Odor-induced {cAMP} production {inDrosophila} melanogasterolfactory sensory neurons}},
   journal = {J Exp Biol},
 }
