--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{{{{PLoS} {ONE}}}}}}},
+  journal = {{{{{{{PLoS} {ONE}}}}}}}},
 }
 
 
@@ -685,4 +685,20 @@
   author = {Fabio Miazzi and Bill S. Hansson and Dieter Wicher},
   title = {{Odor-induced {cAMP} production {inDrosophila} melanogasterolfactory sensory neurons}},
   journal = {J Exp Biol},
+}
+
+
+@article{Getahun_2013,
+  doi = {10.1371/journal.pone.0058889},
+  url = {http://dx.doi.org/10.1371/journal.pone.0058889},
+  year = {2013},
+  month = {mar},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {8},
+  number = {3},
+  pages = {e58889},
+  author = {Merid N. Getahun and Shannon B. Olsson and Sofia Lavista-Llanos and Bill S. Hansson and Dieter Wicher},
+  editor = {Richard David Newcomb},
+  title = {{Insect Odorant Response Sensitivity Is Tuned by Metabotropically Autoregulated Olfactory Receptors}},
+  journal = {PLoS} {ONE}},
 }
